# hlangana_linear

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
core/: Hlangana.hpp  Hlangana_OptionHandler.hpp  Hlangana_TrilinosSolverConfig.cpp  Hlangana_TrilinosSolverConfig.hpp
disc/: MassMatrix.cpp  MassMatrix.hpp
grid/: ParGrid2D.cpp  ParGrid2D.hpp
linear/: BuildMap.cpp  BuildMap.hpp  ExportArray.cpp  ExportArray.hpp  ExportArray_impl.hpp  LinearSolverBelos.cpp  LinearSolverBelos.hpp
mesh/: Hlangana_ParMesh2D.cpp  Hlangana_ParMesh2D.hpp
scripts/: strat_input.xml
